# django-finance

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
.github/workflows/: django.yaml
.requirements/: requirements.txt
accounts/migrations/: 0001_initial.py
django_finance/accounts/: admin.py  apps.py
django_finance/templates/account/: login.html  logout.html  signup.html
django_finance/templates/tracker/: transactions_container.html  transactions_create.html  transactions_create_success.html  transactions_list.html  transactions_update.html
django_finance/tests/: conftest.py  factories.py
django_finance/tests/accounts/: test_models.py
django_finance/tests/tracker/: test_category.py  test_models.py  test_views.py
django_finance/tracker/: apps.py  filters.py  forms.py  managers.py  models.py  urls.py  views.py
project/: settings.py  testing_settings.py  urls.py
static/css/: styles.css
static/js/: htmx.min.js
templates/: base.html  index.html  navbar.html
templates/account/: login.html  logout.html  signup.html
templates/tracker/: index.html  transactions_container.html  transactions_create.html  transactions_create_success.html  transactions_form.html  transactions_list.html  transactions_update.html
tests/: conftest.py  factories.py
tests/accounts/: test_models.py
tests/tracker/: test_category.py  test_models.py  test_views.py
tracker/: filters.py  forms.py  models.py  urls.py  views.py
tracker/management/commands/: generate_transactions.py
tracker/migrations/: 0001_initial.py
(+1 files in other folders)
