[project]
requires-python = ">=3.12"

[tool.coverage.report]
#fail_under = 100
omit = [
    "*/migrations/*",
]
show_missing = true
skip_covered = true

[tool.isort]
profile = "black"
src_paths = ["django_finance"]



[tool.pytest.ini_options]
addopts = "--nomigrations --disable-socket"
DJANGO_SETTINGS_MODULE = "project.testing_settings"
filterwarnings = [
    "error",
]
testpaths = [
    "django_finance",
]

python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]